web-infras/parser/tests/fixtures/babel/core/uncategorised/412/output.txt
[SyntaxError]: Illegal continue statement: no surrounding iteration statement. (1,1)
1|continue 2;
 |^
[SyntaxError]: Missing semicolon or line terminator. (1,10)
1|continue 2;
 |        ^
